Update title and meta tags for Leon Nails and Beauty

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Königliche Nägel – Luxus Nagelstudio in Berlin</title>
-    <meta name="description" content="Königliche Nägel – Ihr exklusives Nagelstudio in Berlin. Maniküre, Gel-Nägel, Nageldesign und Pediküre in luxuriöser Atmosphäre." />
-    <meta property="og:title" content="Königliche Nägel – Luxus Nagelstudio" />
-    <meta property="og:description" content="Ihr exklusives Nagelstudio in Berlin für Maniküre, Gel-Nägel und Nageldesign." />
+    <title>Leon Nails and Beauty – Nagelstudio in Ulm</title>
+    <meta name="description" content="Leon Nails and Beauty salon in Ulm Maniküre, Gel-Nägel, Nageldesign und Pediküre in luxuriöser Atmosphäre." />
+    <meta property="og:title" content="Leon Nails and Beauty" />
+    <meta property="og:description" content="Ihr exklusives Nagelstudio in Ulm für Maniküre, Gel-Nägel und Nageldesign." />
     <meta property="og:type" content="website" />
   </head>
 
