Add favicon link to index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="data:," />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Leon Nails and Beauty – Nagelstudio in Ulm</title>
     <meta name="description" content="Leon Nails and Beauty salon in Ulm Maniküre, Gel-Nägel, Nageldesign und Pediküre in luxuriöser Atmosphäre." />
